# rio-diff

./: README.md  main.py  pyproject.toml
rio_diff/: __init__.py  compare.py  models.py  render.py  utils.py
rio_diff/scripts/: cli.py
